--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Prediction: Temporal Series using clusters for products and hospitals"
+    "# Model Prediction: Random Forest using clusters for products and hospitals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,16 +394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error on test set: 8025.112695607978\n",
-      "R-squared on test set: 0.8339759071450739\n",
-      "Mean Absolute Error on test set: 27.490656264402272\n",
+      "Mean Squared Error on test set: 7286.690486620744\n",
+      "R-squared on test set: 0.8498017475605789\n",
+      "Mean Absolute Error on test set: 28.107979160645712\n",
       "Max Price: 2458.5\n",
       "Min Price: 0.989571\n"
      ]
