--- a/random_forest_predictions.ipynb
+++ b/random_forest_predictions.ipynb
@@ -255,10 +255,7 @@
    "source": [
     "# Assuming df is your DataFrame\n",
     "# Combine 'DAY', 'MONTH', and 'YEAR' columns into a new 'date' column\n",
-    "df['DATE'] = df['DAY'].astype(str) + '-' + df['MONTH'].astype(str) + '-' + df['YEAR'].astype(str)\n",
-    "\n",
-    "# Drop the original 'DAY', 'MONTH', 'YEAR' columns if needed\n",
-    "#df.drop(['DAY', 'MONTH', 'YEAR'], axis=1, inplace=True)"
+    "df['DATE'] = df['DAY'].astype(str) + '-' + df['MONTH'].astype(str) + '-' + df['YEAR'].astype(str)"
    ]
   },
   {
